--- a/Views/Home/Results.cshtml
+++ b/Views/Home/Results.cshtml
@@ -9,7 +9,7 @@
         <!-- This information is displayed ONLY for the Survey Class -->
         <div class="container">  
             <div class="displayInfo">
-                @model dojoSurveyModel.Models.Survey 
+                @model Survey 
                 <h3>Info Submitted by User:</h3>
                 <p><span>Name:</span>  @Model.Name</p>
                 <p><span>Dojo Location:</span>  @Model.Dojo</p>
